# OpenGL

./: CMakeLists.txt  CMakePresets.json  README.md
1.Setup/: CMakeLists.txt  main.cpp
2.FirstTriangle/: CMakeLists.txt  main.cpp
3.Transformations/: CMakeLists.txt  main.cpp
4.Interpolation/: CMakeLists.txt  main.cpp
5.SpinningPyramid/: CMakeLists.txt  main.cpp
6.TwoSpinsCleanup/: CMakeLists.txt  Mesh.cpp  Mesh.h  Shaders.cpp  Shaders.h  Window.cpp  Window.h  fragShader.s  main.cpp  vertexShader.s
